# viva

./: Cargo.toml  LICENSES  README.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  context.rs  defaults.rs  environment.rs  errors.rs  lib.rs  main.rs  micromamba.rs
src/models/: app.rs  environment.rs  mod.rs
src/rattler/: mod.rs
src/rattler/commands/: create.rs
