[package]
name = "viva"
version = "0.0.1"
edition = "2021"
license-file = "LICENSES"
authors = ["Markus Binsteiner <markus@frkl.dev>", "Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Transparently create environments and run executables contained within."
homepage = "https://github.com/frkl-dev/viva"
repository = "https://github.com/frkl-dev/viva"
readme = "README.md"

[lib]
name = "viva"
path = "src/lib.rs"

[[bin]]
name = "viva"
path = "src/cli.rs"


[build-dependencies]
static_vcruntime = "2.0"

[dependencies]
anyhow = "1.0.69"
bzip2 = "0.4.4"
clap = { version = "4.1.4", features = ["derive"] }
console = { version = "0.15.5", features = ["windows-console-colors"] }
dirs = "4.0.0"
directories = "5.0.0"
futures = "0.3.27"
indicatif = "0.17.3"
is_executable = "1.0.1"
once_cell = "1.17.1"
openssl-sys = "0.9.80"
rattler = "0.2.0"
rattler_conda_types = "0.2.0"
rattler_repodata_gateway = { version = "0.2.0", features = ["sparse"] }
rattler_solve = "0.2.0"
rattler_virtual_packages = { version = "0.2.0" }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sysinfo = "0.28.2"
tar = "0.4.38"
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
zmq = "0.10.0"
serde_yaml = "0.9.19"
cached = "0.42.0"

